# wow-flask

./: .env.example  .gitignore  Dockerfile  Makefile  Procfile  RAILWAY.md  README.md  docker-compose.yml  entrypoint.sh  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  wsgi.py
app/: __init__.py  config.py  extensions.py
app/blueprints/admin/: routes.py
app/blueprints/api/: __init__.py
app/blueprints/auth/: routes.py
app/blueprints/dashboard/: routes.py
app/blueprints/public/: routes.py
app/models/: __init__.py  attachment.py  audit.py  category.py  comment.py  favorite.py  invite.py  moderation.py  rating.py  role.py  tag.py  tutorial.py  user.py
app/templates/layouts/: base.html
app/templates/public/: index.html
scripts/: seed.py  validate_railway_deployment.py
